<resources>
    <string name="app_name">WarehousePicking</string>
    <string name="title_picking_list">拣货单</string>
    <string name="title_replenishment_list">补货单</string>
    <string name="order_number">订单号</string>
    <string name="item_id">物料编号</string>
    <string name="item_name">名称</string>
    <string name="item_quantity">数量</string>
    <string name="item_location">架位</string>
    <string name="current_index_format">"(%1$d/%2$d)"</string>
    <string name="needs_restocking">缺货(2)</string>
    <string name="out_of_stock">短拣(3)</string>
    <string name="reset_order">重置订单(4)</string>
    <string name="pick_item">拣货(1)</string>
    <string name="order_number_edit_hint">请输入订单号</string>
    <string name="staff">员工:"    "</string>
    <string name="working">工作中…</string>
    <string name="stock_picking">拣货</string>
    <string name="back_order">补货</string>
    <string name="done">下班</string>
    <string name="scan_to_login">扫描登陆</string>
    <string name="please_scan_to_login">请扫描工牌登陆</string>
    <string name="confirm_out_of_stock">该物料是否短拣？</string>
    <string name="confirm_reset_order">是否重置订单？</string>
    <string name="yes">是(2)</string>
    <string name="no">否(1)</string>
    <string name="quantity_to_restock">缺货数量</string>
    <string name="submit">提交(#)</string>
    <string name="stock_barcode_edit_text_hind">请输入物料条码</string>
    <string name="stock_barcode">物料条码</string>
    <string name="please_scan_order_barcode">请扫描订单条码</string>
    <string name="please_scan_stock_barcode">请扫描物料条码</string>
    <string name="relogin">重新登录</string>
    <string name="retry">重试</string>
    <string name="network_error_message">网络异常，请重试</string>
    <string name="qrcode_error_message">登陆信息有误，请重试</string>
    <string name="logging_in">登陆中</string>
    <string name="get_order_error_message">获取订单失败，请检查后重试</string>
    <string name="loading">读取中…</string>
    <string name="submitting">提交中…</string>
    <string name="date_formatting_error_message">日期格式错误</string>
    <string name="ignore">忽略</string>
    <string name="barcode_confirm_error_message">条码核对不正确，请重试</string>
    <string name="quantity_error_message">数量有误，请重新输入</string>
    <string name="order_reloaded">已经为您重新加载订单</string>
    <string name="next_item">下一个</string>
    <string name="done_adding_restock_items">已重新添加缺货物料</string>
    <string name="maximum_quantity_format">"数量（最大：%1$d）"</string>
    <string name="stock_barcode_not_found_message">该订单无此物料</string>
    <string name="restock_quantity">补货数量</string>
    <string name="submit_restock">完成补货</string>
    <string name="restock_network_error_message">补货失败，请检查网络</string>
    <string name="restock_quantity_error">补货数量不正确，请重试</string>
    <string name="next_success_toast">拣货成功</string>
    <string name="restock_success_toast">已提交补货</string>
    <string name="out_of_stock_success_toast">短拣提交成功</string>
    <string name="back_order_success_toast">补货提交成功</string>
    <string name="barcode_scan_prompt_format">"请扫描%1$s的条码"</string>


</resources>
