<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="280dp"
            android:layout_height="155dp">

        <TextView
                android:text="@string/quantity_to_restock"
                android:id="@+id/quantityLabel"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                style="@style/dialog_title_textview_style"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/errorMessageTextView"/>

        <EditText
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:inputType="number"
                android:id="@+id/quantityEditText"
                style="@style/input_and_scan_edit_text_style"
                android:paddingStart="13dp"
                android:paddingEnd="10dp"
                android:background="@drawable/dialog_edit_text_background"
                app:layout_constraintStart_toEndOf="@+id/quantityLabel"
                android:layout_marginStart="14dp"
                app:layout_constraintTop_toTopOf="@+id/quantityLabel"
                app:layout_constraintBottom_toBottomOf="@+id/quantityLabel"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                />

        <Button
                android:text="@string/submit"
                android:layout_width="133dp"
                android:layout_height="33dp"
                android:id="@+id/submitButton"
                android:background="@drawable/blue_gradient_button_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@drawable/blue_gradient_button_text_color"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/quantityEditText">
        </Button>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/errorMessageTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:textColor="#E01313"
                android:text="@string/quantity_error_message"
                android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>