<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="backOrderViewModel"
                type="com.topsmarteye.warehousepicking.backOrder.BackOrderViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/overallConstraintLayout"
            android:background="@color/grey_layout_background_color">

        <TextView
                android:text="@string/stock_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stockIDLabel"
                style="@style/order_number_textview_style"
                app:layout_constraintTop_toBottomOf="@+id/orderIDLabel"
                android:layout_marginTop="31dp"
                app:layout_constraintEnd_toEndOf="@+id/orderIDLabel"
                app:layout_constraintStart_toStartOf="@+id/orderIDLabel"
                android:visibility="visible"/>

        <TextView
                android:text="@string/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/orderIDLabel"
                style="@style/order_number_textview_style"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="47dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp"/>

        <TextView
                android:text="@{backOrderViewModel.orderID}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/order_number_textview_style"
                android:id="@+id/orderIDTextView"
                app:layout_constraintBaseline_toBaselineOf="@+id/orderIDLabel"
                app:layout_constraintStart_toEndOf="@+id/orderIDLabel"
                android:layout_marginStart="41dp"
                tools:text="123456"/>

        <TextView
                android:text="@{backOrderViewModel.stockBarcode}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/order_number_textview_style"
                android:id="@+id/stockBarcodeTextView"
                app:layout_constraintStart_toStartOf="@+id/orderIDTextView"
                app:layout_constraintBaseline_toBaselineOf="@+id/stockIDLabel"
                tools:text="12345"/>

        <TextView
                android:text="@string/restock_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/order_number_textview_style"
                android:id="@+id/restockQuantityLabel"
                app:layout_constraintEnd_toEndOf="@+id/stockIDLabel"
                app:layout_constraintStart_toStartOf="@+id/stockIDLabel"
                android:layout_marginTop="31dp"
                app:layout_constraintTop_toBottomOf="@+id/stockIDLabel"/>

        <EditText
                android:layout_width="0dp"
                style="@style/input_and_scan_edit_text_style"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/restockQuantityEditText"
                app:layout_constraintBaseline_toBaselineOf="@+id/restockQuantityLabel"
                android:layout_marginEnd="21dp"
                app:layout_constraintEnd_toStartOf="@+id/submitButton"
                app:layout_constraintStart_toEndOf="@+id/restockQuantityLabel"
                android:layout_marginStart="20dp">
            <requestFocus/>
        </EditText>

        <Button
                android:text="@string/submit_restock"
                android:id="@+id/submitButton"
                style="@style/stock_list_item_action_button_style"
                app:layout_constraintTop_toTopOf="@+id/restockQuantityEditText"
                app:layout_constraintBottom_toBottomOf="@+id/restockQuantityEditText"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="52dp"/>

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/progressBar"
                app:layout_constraintBottom_toBottomOf="@+id/submitButton"
                app:layout_constraintTop_toTopOf="@+id/submitButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/submitButton"
                android:visibility="gone"/>

        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="81dp"
                app:layout_constraintTop_toBottomOf="@+id/restockQuantityEditText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/itemCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/cardViewConstraintLayout">

                <View
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:id="@+id/cardHeaderView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@color/header_background_color"/>

                <TextView
                        android:text="@string/item_id"
                        style="@style/stock_list_item_label_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/itemIDLabel"
                        app:layout_constraintStart_toStartOf="@+id/itemIDTextView"
                        app:layout_constraintEnd_toEndOf="@+id/itemIDTextView"
                        app:layout_constraintBottom_toBottomOf="@+id/cardHeaderView"
                        app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                        android:text="@string/item_name"
                        style="@style/stock_list_item_label_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/itemNameLabel"
                        app:layout_constraintStart_toStartOf="@+id/itemNameTextView"
                        app:layout_constraintEnd_toEndOf="@+id/itemNameTextView"
                        app:layout_constraintBaseline_toBaselineOf="@+id/itemIDLabel"/>

                <TextView
                        android:text="@string/item_location"
                        style="@style/stock_list_item_label_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/itemLocationLabel"
                        app:layout_constraintStart_toStartOf="@+id/itemLocationTextView"
                        app:layout_constraintEnd_toEndOf="@+id/itemLocationTextView"
                        app:layout_constraintBaseline_toBaselineOf="@+id/itemNameLabel"/>

                <TextView
                        android:text="@{backOrderViewModel.itemToRestock.stockId}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/itemIDTextView"
                        style="@style/stock_list_item_textview_style"
                        tools:text="1234"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/itemNameTextView"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintTop_toBottomOf="@+id/cardHeaderView"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                        android:text="@{backOrderViewModel.itemToRestock.name}"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/itemNameTextView"
                        style="@style/stock_list_item_textview_style"
                        tools:text="Dior"
                        app:layout_constraintStart_toEndOf="@+id/itemIDTextView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/itemLocationTextView"
                        app:layout_constraintBaseline_toBaselineOf="@+id/itemIDTextView"
                        android:focusable="true"/>

                <TextView
                        android:text="@{backOrderViewModel.itemToRestock.location}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/itemLocationTextView"
                        style="@style/stock_list_item_textview_style"
                        tools:text="123"
                        app:layout_constraintStart_toEndOf="@+id/itemNameTextView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBaseline_toBaselineOf="@+id/itemNameTextView"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>