<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="stockListViewModel"
                type="com.topsmarteye.warehousepicking.stockList.StockListViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/overallConstraintLayout"
            android:background="@color/grey_layout_background_color">

        <ImageView
                android:id="@+id/orderNumberImageView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/currentItemCardView"
                style="@style/order_number_blue_bar_style"/>

        <TextView
                android:layout_width="wrap_content"
                android:text="@string/order_number"
                app:layout_constraintStart_toEndOf="@+id/orderNumberImageView"
                android:layout_marginStart="13dp"
                android:id="@+id/orderNumberLabel"
                style="@style/order_number_textview_style"
                app:layout_constraintTop_toTopOf="@+id/orderNumberImageView"
                app:layout_constraintBottom_toBottomOf="@+id/orderNumberImageView"
                app:layout_constraintVertical_bias="0.22000003"/>

        <TextView
                android:layout_width="wrap_content"
                android:id="@+id/orderNumberTextView"
                android:text="@{stockListViewModel.orderNumber}"
                app:layout_constraintBaseline_toBaselineOf="@id/orderNumberLabel"
                app:layout_constraintStart_toEndOf="@+id/orderNumberLabel"
                android:layout_marginStart="23dp"
                tools:text="1234567"
                style="@style/order_number_textview_style"/>

        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="133dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardElevation="2dp"
                android:id="@+id/currentItemCardView"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/currentItemCardViewConstraintLayout">

                <View
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:id="@+id/itemHeaderView"
                        android:background="@color/header_background_color"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                        android:id="@+id/IDLabel"
                        android:text="@string/item_id"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/nameLabel"
                        app:layout_constraintBottom_toBottomOf="@+id/itemHeaderView"
                        app:layout_constraintTop_toTopOf="@+id/itemHeaderView"
                        style="@style/stock_list_item_label_style"/>

                <TextView
                        android:id="@+id/nameLabel"
                        android:text="@string/item_name"
                        app:layout_constraintStart_toEndOf="@+id/IDLabel"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/quantityLabel"
                        app:layout_constraintBaseline_toBaselineOf="@+id/IDLabel"
                        style="@style/stock_list_item_label_style"/>

                <TextView
                        android:id="@+id/quantityLabel"
                        android:text="@string/item_quantity"
                        app:layout_constraintStart_toEndOf="@+id/nameLabel"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/locationLabel"
                        app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
                        style="@style/stock_list_item_label_style"/>

                <TextView
                        android:id="@+id/locationLabel"
                        android:text="@string/item_location"
                        app:layout_constraintStart_toEndOf="@+id/quantityLabel"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBaseline_toBaselineOf="@+id/quantityLabel"
                        style="@style/stock_list_item_label_style"/>

                <TextView
                        android:id="@+id/IDTextView"
                        android:text="@{stockListViewModel.currentItem.stockId}"
                        tools:text="化妆品"
                        app:layout_constraintEnd_toEndOf="@+id/IDLabel"
                        app:layout_constraintStart_toStartOf="@+id/IDLabel"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/itemHeaderView"
                        style="@style/stock_list_item_textview_style"/>

                <TextView
                        android:id="@+id/nameTextView"
                        android:text="@{stockListViewModel.currentItem.name}"
                        tools:text="Dior"
                        app:layout_constraintBaseline_toBaselineOf="@+id/IDTextView"
                        style="@style/stock_list_item_textview_style"
                        android:layout_width="0dp"
                        app:layout_constraintStart_toEndOf="@+id/IDTextView"
                        android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toStartOf="@+id/quantityTextView"
                        android:layout_marginEnd="16dp"
                        android:focusable="true"/>

                <TextView
                        android:id="@+id/quantityTextView"
                        android:text="@{String.valueOf(stockListViewModel.currentItem.quantity)}"
                        tools:text="2"
                        app:layout_constraintEnd_toEndOf="@+id/quantityLabel"
                        app:layout_constraintStart_toStartOf="@+id/quantityLabel"
                        app:layout_constraintBaseline_toBaselineOf="@+id/nameTextView"
                        style="@style/stock_list_item_textview_style"/>

                <TextView
                        android:id="@+id/locationTextView"
                        android:text="@{stockListViewModel.currentItem.location}"
                        app:layout_constraintEnd_toEndOf="@+id/locationLabel"
                        app:layout_constraintStart_toStartOf="@+id/locationLabel"
                        app:layout_constraintBaseline_toBaselineOf="@+id/quantityTextView"
                        tools:text="6排6列6层"
                        style="@style/stock_list_item_textview_style"/>

                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        app:srcCompat="@drawable/divider_line"
                        android:id="@+id/currentItemCardViewdividerLine"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/IDTextView"
                        android:layout_marginTop="10dp"/>

                <Button
                        android:text="@string/needs_restocking"
                        android:id="@+id/needsRestockingButton"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/currentItemCardViewdividerLine"
                        android:layout_marginEnd="13dp"
                        app:layout_constraintEnd_toStartOf="@+id/outOfStockButton"
                        android:onClick="@{() -> stockListViewModel.onRestock()}"
                        style="@style/stock_list_item_action_button_style"/>

                <Button
                        android:id="@+id/outOfStockButton"
                        android:text="@string/out_of_stock"
                        android:onClick="@{() -> stockListViewModel.onOutOfStock()}"
                        app:layout_constraintTop_toTopOf="@+id/needsRestockingButton"
                        app:layout_constraintBottom_toBottomOf="@+id/needsRestockingButton"
                        app:layout_constraintVertical_bias="0.0"
                        style="@style/stock_list_item_action_button_style"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="51dp"/>

                <Button
                        android:text="@string/next_item"
                        android:onClick="@{() -> stockListViewModel.onNext()}"
                        style="@style/stock_list_item_action_button_style"
                        app:layout_constraintEnd_toStartOf="@+id/needsRestockingButton"
                        android:layout_marginEnd="13dp"
                        app:layout_constraintTop_toTopOf="@+id/needsRestockingButton"
                        app:layout_constraintBottom_toBottomOf="@+id/needsRestockingButton"
                        android:id="@+id/nextButton">

                    <requestFocus/>
                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="77dp"
                app:layout_constraintTop_toBottomOf="@+id/currentItemCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardElevation="3dp"
                android:id="@+id/nextItemCardView"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/nextItemCardViewConstraintLayout">

                <TextView
                        android:id="@+id/nextItemIDLabel"
                        android:text="@string/item_id"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/nextItemNameLabel"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/nextItemCardViewDividerLine"
                        style="@style/stock_list_item_label_style"/>

                <TextView
                        android:id="@+id/nextItemNameLabel"
                        android:text="@string/item_name"
                        app:layout_constraintStart_toEndOf="@+id/nextItemIDLabel"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/nextItemQuantityLabel"
                        app:layout_constraintBaseline_toBaselineOf="@+id/nextItemIDLabel"
                        style="@style/stock_list_item_label_style"/>

                <TextView
                        android:id="@+id/nextItemQuantityLabel"
                        android:text="@string/item_quantity"
                        app:layout_constraintStart_toEndOf="@+id/nextItemNameLabel"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/nextItemLocationLabel"
                        app:layout_constraintBaseline_toBaselineOf="@+id/nextItemNameLabel"
                        style="@style/stock_list_item_label_style"/>

                <TextView
                        android:id="@+id/nextItemLocationLabel"
                        android:text="@string/item_location"
                        app:layout_constraintStart_toEndOf="@+id/nextItemQuantityLabel"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBaseline_toBaselineOf="@+id/nextItemQuantityLabel"
                        style="@style/stock_list_item_label_style"/>

                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        app:srcCompat="@drawable/divider_line"
                        android:id="@+id/nextItemCardViewDividerLine"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="34dp"
                        app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                        android:id="@+id/nextItemIDTextView"
                        android:text="@{stockListViewModel.nextItem.stockId}"
                        tools:text="化妆品"
                        app:layout_constraintEnd_toEndOf="@+id/nextItemIDLabel"
                        app:layout_constraintStart_toStartOf="@+id/nextItemIDLabel"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nextItemCardViewDividerLine"
                        app:layout_constraintHorizontal_bias="0.5"
                        style="@style/stock_list_item_textview_style"/>

                <TextView
                        android:id="@+id/nextItemNameTextView"
                        android:text="@{stockListViewModel.nextItem.name}"
                        tools:text="Dior"
                        app:layout_constraintBaseline_toBaselineOf="@+id/nextItemIDTextView"
                        style="@style/stock_list_item_textview_style"
                        app:layout_constraintEnd_toStartOf="@+id/nextItemQuantityTextView"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintStart_toEndOf="@+id/nextItemIDTextView"
                        android:layout_marginStart="24dp"
                        android:layout_width="0dp"/>

                <TextView
                        android:id="@+id/nextItemQuantityTextView"
                        android:text="@{String.valueOf(stockListViewModel.nextItem.quantity)}"
                        tools:text="2"
                        app:layout_constraintEnd_toEndOf="@+id/nextItemQuantityLabel"
                        app:layout_constraintStart_toStartOf="@+id/nextItemQuantityLabel"
                        app:layout_constraintBaseline_toBaselineOf="@+id/nextItemNameTextView"
                        style="@style/stock_list_item_textview_style"/>

                <TextView
                        android:id="@+id/nextItemLocationTextView"
                        android:text="@{stockListViewModel.nextItem.location}"
                        tools:text="6排6列6层"
                        app:layout_constraintEnd_toEndOf="@+id/nextItemLocationLabel"
                        app:layout_constraintStart_toStartOf="@+id/nextItemLocationLabel"
                        app:layout_constraintBaseline_toBaselineOf="@+id/nextItemQuantityTextView"
                        style="@style/stock_list_item_textview_style"/>

                <TextView
                        android:text="@string/next_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/nextItemLabel"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="30dp"
                        app:layout_constraintEnd_toStartOf="@+id/nextItemIDLabel"
                        android:layout_marginEnd="30dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/nextItemCardViewDividerLine"
                        android:textSize="15sp"
                        android:textColor="@color/light_grey_text_color"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/submitProgressBar"
                app:layout_constraintBottom_toTopOf="@+id/currentItemCardView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/submitTextView"
                android:layout_marginEnd="13dp"
                android:visibility="gone"/>

        <TextView
                android:text="@string/submitting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submitTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/currentItemCardView"
                app:layout_constraintVertical_bias="0.51"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="100dp"
                android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>